[gd_scene load_steps=10 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Born2bSportyV2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sporty.tres" type="DynamicFont" id=3]
[ext_resource path="res://MENU_BG_MUSIC.wav" type="AudioStream" id=4]
[ext_resource path="res://MENU_ACCEPT.wav" type="AudioStream" id=5]
[ext_resource path="res://MENU_MOVE.wav" type="AudioStream" id=6]
[ext_resource path="res://img_bg.jpg" type="Texture" id=7]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ImgBg" type="Sprite" parent="."]
position = Vector2( 317.861, 176.797 )
scale = Vector2( 0.53112, 0.53112 )
texture = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0.968627, 0.309804, 0.309804, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 640.0
margin_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 257.0
margin_top = 78.0
margin_right = 383.0
margin_bottom = 282.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 126.0
margin_bottom = 96.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 126.0
margin_bottom = 96.0
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "ADA"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 126.0
margin_bottom = 204.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 11.0
margin_right = 115.0
margin_bottom = 104.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 104.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_left = 12.0
margin_right = 92.0
margin_bottom = 32.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 14.0
margin_bottom = 32.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 18.0
margin_right = 80.0
margin_bottom = 32.0
rect_min_size = Vector2( 43, 0 )
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 36.0
margin_right = 104.0
margin_bottom = 68.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 104.0
margin_bottom = 32.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 14.0
margin_bottom = 32.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 18.0
margin_right = 104.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 72.0
margin_right = 104.0
margin_bottom = 104.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_left = 21.0
margin_right = 83.0
margin_bottom = 32.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 14.0
margin_bottom = 32.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 18.0
margin_right = 62.0
margin_bottom = 32.0
rect_min_size = Vector2( 43, 0 )
custom_fonts/font = SubResource( 2 )
text = "Exit"

[node name="MenuBG" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0

[node name="MenuAcceptAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="MenuMoveAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
